--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <title>title</title>
 </head>
 <body>
-    
+    <p>
+        Hello! this is my first website
+        i am not sure how this works and this is just an experiment
+    </p>
 </body>
 </html>
