experimentation with img and text
did experiments with the bold, italic, underlined text.
added 2 images to a newly created folder called images and inserted in website using the src attribute

--- a/index.html
+++ b/index.html
@@ -1,8 +1,24 @@
 <html>
 <head>
-    <title>title</title>
+    <title>My First Time</title>
 </head>
 <body>
-    
+    <p>
+        Hello! this is my first time making a web page <br>
+    </p>
+    <div>
+        <p>
+            <b>this is bold text</b><br>
+            <i>this is italicised text</i><br>
+            <u>this is underlined text</u><br>
+        </p>
+    </div>
+    <div>
+        <img src="images/PFP.png"/>
+        <img src="images/PFP.png"/>
+    </div>
+    <div>
+        <img src="images/pfp.jpg"/>
+    </div>
 </body>
 </html>
