added some div tags to html doc
made notes on css and html doc

--- a/landing.html
+++ b/landing.html
@@ -1,11 +1,12 @@
 <html>
 <head>
     <title>Task Master</title>
-    <style href="style.css"></style>
+    <link rel= "stylesheet" href="style.css">
 </head>
 <body>
-    <div class="Nav_Bar">
-        
-    </div>
+    <div class="nav_bar"></div>
+    <div class="rectangle_top"></div>
+    <div class="rectangle_mid"></div>
+    <div class="rectangle_bot"></div>
 </body>
 </html>
