added semantic tags
added sematic tags to the html and made the two sign up and sign in buttons

partially made the button layout

--- a/landing.html
+++ b/landing.html
@@ -4,9 +4,17 @@
     <link rel= "stylesheet" href="style.css">
 </head>
 <body>
-    <div class="nav_bar"></div>
-    <div class="rectangle_top"></div>
-    <div class="rectangle_mid"></div>
-    <div class="rectangle_bot"></div>
+    <header>
+        <!--this will have the logo and the sign up and sign in buttons at the top-->
+        <div class="nav_bar">
+            <button id="sign_in">Sign In</button>
+            <button id="sign_up">Sign Up</button>
+        </div>
+    </header>
+    <main>
+        <!--this will have the main design of the html(the design at the top and the image with the features)-->
+        <div class="main"></div>
+        <div class="end"></div>
+    </main>
 </body>
 </html>
