--- a/landing.html
+++ b/landing.html
@@ -5,16 +5,9 @@
 </head>
 <body>
     <header>
-        <!--this will have the logo and the sign up and sign in buttons at the top-->
-        <div class="nav_bar">
-            <button id="sign_in">Sign In</button>
-            <button id="sign_up">Sign Up</button>
-        </div>
+        <div class="nav_bar"></div>
     </header>
-    <main>
-        <!--this will have the main design of the html(the design at the top and the image with the features)-->
-        <div class="main"></div>
-        <div class="end"></div>
-    </main>
+    <div, id = "scroll">
+    </div>
 </body>
 </html>
